fix: no more 1px jump on input focus

--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -54,6 +54,7 @@
 		var(--form-field_outline_color_focused);
 	outline: var(--form-field_halo_color) solid var(--form-field_halo_width);
 	background: var(--form-field_background_focused);
+	margin: 0;
 }
 
 .input:disabled,
